revert: 回滚N+1优化和JsonProperty（排查502根因）